tests/baselines/reference/interfaceImplementation2.errors.txt
tests/cases/compiler/interfaceImplementation2.ts(8,7): error TS2420: Class 'C3' incorrectly implements interface 'I1'.
  Index signature is missing in type 'I1'.


==== tests/cases/compiler/interfaceImplementation2.ts (1 errors) ====
    interface I1 {
        iObj:{ };
        iNum:number;
        iAny:any;
        iFn():void;
    }
    
    class C3 implements I1 {
          ~~
!!! error TS2420: Class 'C3' incorrectly implements interface 'I1'.
!!! error TS2420:   Index signature is missing in type 'I1'.
        public iObj:{ };
        public iNum:number;
        public iAny:any;
    }
    